content/media/webm/WebMReader.cpp
@@ -74,7 +74,6 @@ static int webm_read(void *aBuffer, size_t aLength, void *aUserData)
       eof = true;
       break;
     }
-    decoder->NotifyBytesConsumed(bytes);
     aLength -= bytes;
     p += bytes;
   }
